<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corBackgroundLogin"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/image_register_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/alt_bg_register"
        android:scaleType="fitXY"
        android:tint="@color/corBackgroundLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/loginbg" />

    <ImageView
        android:id="@+id/image_register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/foodparty"
        android:contentDescription="@string/alt_logo"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilayout_login_email"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilayout_login_email"
        style="@style/AppTheme.inputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/white"
        android:theme="@style/AppTheme.inputLogin"
        app:boxBackgroundColor="@color/backgroundField"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tilayout_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleTint="@color/white60">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedit_login_email"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/emailLogin"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusDown="@id/tilayout_login_password"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilayout_login_password"
        style="@style/AppTheme.inputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/white"
        android:theme="@style/AppTheme.inputLogin"
        app:boxBackgroundColor="@color/backgroundField"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/text_password_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white60">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedit_register_password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/senhaLogin"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusDown="@id/button_register"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_password_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/esqueceuSenha"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/Widget.AppCompat.CompoundButton.RadioButton"
        app:cornerRadius="5dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/btnLogin"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/button_login_facebook"
        app:icon="@drawable/iconsfacebook"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:paddingLeft="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/fbColor"
        android:textColor="@color/white"
        android:textAppearance="@style/Widget.AppCompat.CompoundButton.RadioButton"
        app:cornerRadius="5dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/loginFacebook"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@id/text_login_register"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/text_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrese"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>